--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,7 @@
 [build]
-builder = "railpack"
+builder = "nixpacks"
+buildCommand = "pip install -r requirements.txt"
 rootDirectory = "backend"
-buildCommand = "pip install -r backend/requirements.txt"
 
 [deploy]
 startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
