--- a/.github/workflows/import_catalysts.yml
+++ b/.github/workflows/import_catalysts.yml
@@ -1,33 +1,30 @@
 name: Import Catalysts
 
 on:
-  schedule:
-    - cron: "0 6 * * *"   # Runs every day at 6:00 UTC (1 AM EST)
-  workflow_dispatch:       # Allows manual runs from GitHub Actions tab
-  push:
-    branches:
-      - main               # Optional: run when main is updated
+  workflow_dispatch:
 
 jobs:
-  run-importer:
+  import:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.12"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          cd $GITHUB_WORKSPACE
+          pip install -r requirements.txt
 
-    - name: Run import_catalysts.py
-      env:
-        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-      run: |
-        python import_catalysts.py
+      - name: Run import script
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+        run: |
+          cd $GITHUB_WORKSPACE
+          python import_catalysts.py
