--- a/.github/workflows/import_catalysts.yml
+++ b/.github/workflows/import_catalysts.yml
@@ -8,23 +8,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.12"
+          python-version: '3.12'
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
-          cd propai-mvp
+          pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run importer
+      - name: Run catalyst importer
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
-          cd propai-mvp
           python import_catalysts.py
+
