--- a/.github/workflows/import_catalysts.yml
+++ b/.github/workflows/import_catalysts.yml
@@ -8,19 +8,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
-          cache: pip
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
+
+      - name: Debug installed packages
+        run: |
+          python -m pip list
 
       - name: Run importer
         env:
