--- a/.github/workflows/import_catalysts.yml
+++ b/.github/workflows/import_catalysts.yml
@@ -18,11 +18,13 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd propai-mvp
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
       - name: Debug installed packages
         run: |
+          cd propai-mvp
           python -m pip list
 
       - name: Run importer
@@ -30,4 +32,5 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
+          cd propai-mvp
           python import_catalysts.py
