--- a/.github/workflows/import_catalysts.yml
+++ b/.github/workflows/import_catalysts.yml
@@ -11,6 +11,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Move into correct directory
+        run: |
+          mv propai-mvp/* .
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -18,13 +22,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd propai-mvp
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
       - name: Debug installed packages
         run: |
-          cd propai-mvp
           python -m pip list
 
       - name: Run importer
@@ -32,5 +34,4 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
-          cd propai-mvp
           python import_catalysts.py
