--- a/.github/workflows/import_catalysts.yml
+++ b/.github/workflows/import_catalysts.yml
@@ -11,10 +11,6 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Move into correct directory
-        run: |
-          mv propai-mvp/* .
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -22,11 +18,13 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd propai-mvp
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
       - name: Debug installed packages
         run: |
+          cd propai-mvp
           python -m pip list
 
       - name: Run importer
@@ -34,4 +32,5 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
+          cd propai-mvp
           python import_catalysts.py
