--- a/.github/workflows/import_catalysts.yml
+++ b/.github/workflows/import_catalysts.yml
@@ -7,6 +7,10 @@ jobs:
   run-import:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: propai-mvp
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -18,13 +22,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd propai-mvp
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
       - name: Debug installed packages
         run: |
-          cd propai-mvp
           python -m pip list
 
       - name: Run importer
@@ -32,6 +34,4 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
-          cd propai-mvp
           python import_catalysts.py
-
